fix: correct file path url in the flight pages

--- a/auth/favorites.html
+++ b/auth/favorites.html
@@ -31,14 +31,14 @@
     />
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="/src/css/landing-page/styles.css" />
-    <link rel="stylesheet" href="/src/css/flight-page/flightlisting.css" />
-    <link rel="stylesheet" href="/src/css/stay-page/stayslisting.css" />
-    <link rel="stylesheet" href="/src/css/flight-page/flightdetails.css" />
-    <link rel="stylesheet" href="/src/css/flight-page/flightconfirmation.css" />
-    <link rel="stylesheet" href="/src/css/auth/favorites.css" />
-    <link rel="stylesheet" href="/src/css/utils/utilities.css" />
-    <link rel="stylesheet" href="/src/css/utils/responsive.css" />
+    <link rel="stylesheet" href="/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightlisting.css" />
+    <link rel="stylesheet" href="/css/stay-page/stayslisting.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightdetails.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightconfirmation.css" />
+    <link rel="stylesheet" href="/css/auth/favorites.css" />
+    <link rel="stylesheet" href="/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/css/utils/responsive.css" />
   </head>
   <body>
     <!-- Header & Navigation -->
@@ -46,14 +46,14 @@
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
-            href="/flight/flightsearch.html"
+            href="../flight/flightsearch.html"
             target="_blank"
             class="inline-flex nav-link flights-btn nav-booking-tab"
           >
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="/stay/searchstays.html"
+            href="../stay/searchstays.html"
             target="_blank"
             class="inline-flex nav-link stays-btn nav-booking-tab"
           >
@@ -62,7 +62,7 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html" target="_blank"
+          <a href="../landing/index.html" target="_blank"
             ><img src="/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
@@ -97,14 +97,14 @@
             </div>
           </div>
           <div class="profile-layer">
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/user-sm-icon.svg" alt="" />&nbsp;&nbsp;My
               Accounts</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img src="/assets/card-icon.svg" alt="" />&nbsp;&nbsp;Payments</a
             >
-            <a href="/auth/account.html" class="user-link fs-14 fw-medium"
+            <a href="../auth/account.html" class="user-link fs-14 fw-medium"
               ><img
                 src="/assets/settings-icon.svg"
                 alt=""
@@ -125,18 +125,22 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="./flightsearch.html" class="mobile-link" target="_blank">
+        <a
+          href="../flight/flightsearch.html"
+          class="mobile-link"
+          target="_blank"
+        >
           <img src="/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
-        <a href="#" class="mobile-link">
+        <a href="../stay/searchstays.html" class="mobile-link">
           <img src="/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
         </a>
         <a href="#" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
         >
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
+        <a href="../auth/account.html" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/assets/user-icon.svg" alt="" />&nbsp;&nbsp;Account</a
         >
       </div>
