--- a/auth/login.html
+++ b/auth/login.html
@@ -31,10 +31,10 @@
     />
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="/src/css/auth/account.css" />
-    <link rel="stylesheet" href="/src/css/auth/login.css" />
-    <link rel="stylesheet" href="/src/css/utils/utilities.css" />
-    <link rel="stylesheet" href="/src/css/utils/responsive.css" />
+    <link rel="stylesheet" href="/css/auth/account.css" />
+    <link rel="stylesheet" href="/css/auth/login.css" />
+    <link rel="stylesheet" href="/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/css/utils/responsive.css" />
   </head>
   <body>
     <!-- Login section -->
