--- a/auth/account.html
+++ b/auth/account.html
@@ -31,15 +31,15 @@
     />
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="/src/css/landing-page/styles.css" />
-    <link rel="stylesheet" href="/src/css/flight-page/flightlisting.css" />
-    <link rel="stylesheet" href="/src/css/stay-page/stayslisting.css" />
-    <link rel="stylesheet" href="/src/css/flight-page/flightdetails.css" />
-    <link rel="stylesheet" href="/src/css/flight-page/flightconfirmation.css" />
-    <link rel="stylesheet" href="/src/css/auth/favorites.css" />
-    <link rel="stylesheet" href="/src/css/auth/account.css" />
-    <link rel="stylesheet" href="/src/css/utils/utilities.css" />
-    <link rel="stylesheet" href="/src/css/utils/responsive.css" />
+    <link rel="stylesheet" href="/css/landing-page/styles.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightlisting.css" />
+    <link rel="stylesheet" href="/css/stay-page/stayslisting.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightdetails.css" />
+    <link rel="stylesheet" href="/css/flight-page/flightconfirmation.css" />
+    <link rel="stylesheet" href="/css/auth/favorites.css" />
+    <link rel="stylesheet" href="/css/auth/account.css" />
+    <link rel="stylesheet" href="/css/utils/utilities.css" />
+    <link rel="stylesheet" href="/css/utils/responsive.css" />
   </head>
   <body>
     <!-- Header & Navigation -->
@@ -47,13 +47,13 @@
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
-            href="/flight/flightsearch.html"
+            href="../flight/flightsearch.html"
             class="inline-flex nav-link flights-btn nav-booking-tab"
           >
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="/stay/searchstays.html"
+            href="../stay/searchstays.html"
             class="inline-flex nav-link stays-btn nav-booking-tab"
           >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
@@ -61,7 +61,7 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html"
+          <a href="../landing/index.html"
             ><img src="/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
@@ -124,15 +124,19 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="./flightsearch.html" class="mobile-link" target="_blank">
+        <a
+          href="../flight/flightsearch.html"
+          class="mobile-link"
+          target="_blank"
+        >
           <img src="/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Flights</span>
         </a>
-        <a href="#" class="mobile-link">
+        <a href="../stay/searchstays.html" class="mobile-link">
           <img src="/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;&nbsp;Find Stays</span>
         </a>
-        <a href="#" class="mobile-link fs-16 fw-semi-bold"
+        <a href="../auth/favorites.html" class="mobile-link fs-16 fw-semi-bold"
           ><img src="/assets/heart-icon.svg" alt="" />&nbsp;&nbsp;Favorites</a
         >
         <a href="#" class="mobile-link fs-16 fw-semi-bold"
